--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -6,3 +6,12 @@
     padding: 0;
     font-size: 16px;
 }
+
+.modal{
+    *{
+        font-size: 14px;
+    }
+    button{
+        font-size: 14px;
+    }
+}
